<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_abstraction_library</name>
  <version>0.0.1</version>
  <description>CPSwarm Abstraction Library package for UGV</description>

  <maintainer email="prato@ismb.it">Gianluca Prato</maintainer>
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/ugv_abstraction_library</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ugv_mavros_pos_controller</exec_depend>
  <exec_depend>ugv_mavros_moveto</exec_depend>
  <exec_depend>ugv_mavros_moveto_target</exec_depend>
  <exec_depend>ugv_compute_cost</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <metapackage/>
  </export>
</package>
